--- a/server/index.html
+++ b/server/index.html
@@ -1,6 +1,8 @@
 <html>
 <body>
 Hi, this is chaosbot. <br>
-For more information see github!
+For more information see <br>
+  <a href="https://github.com/chaosbot/chaos">Github</a> !
+
 </body>
 </html>
