Add (almost) unclickable link to github page

--- a/server/index.html
+++ b/server/index.html
@@ -1,5 +1,8 @@
 <html>
 <body>
+<script src="js/unclickable.js"></script>
 Hello World!
+<a href="https://github.com/chaosbot/chaos" id="unclickable" onmouseover="moveLink()"><b>Github Link</b></a>
 </body>
 </html>
+
