--- a/server/index.html
+++ b/server/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-Hi, this is chaosbot. <br>
+Hi, this is ChaosBot. <br>
 For more information see <br>
-  <a href="https://github.com/chaosbot/chaos">Github</a> !
+<a href="https://github.com/chaosbot/chaos">Github</a>!
 
 </body>
 </html>
