Who says we can't be W3C compliant? Also, added Facebook Open Graph properties

--- a/server/index.html
+++ b/server/index.html
@@ -1,5 +1,16 @@
-<html>
-<body>
-Hello World!
-</body>
+<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Chaos Bot</title>
+
+		<!-- Facebook Open Graph markup -->
+		<meta property="og:url"                content="http://chaosthebot.com/" />
+		<meta property="og:type"               content="website" />
+		<meta property="og:title"              content="ChaosBot" />
+		<meta property="og:description"        content="A social coding experiment that updates its own code democratically" />
+		<meta property="og:image"              content="https://avatars3.githubusercontent.com/u/28798182?v=3&s=400" />
+	</head>
+	<body>
+		<p>Hello World!</p>
+	</body>
 </html>
