--- a/server/index.html
+++ b/server/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-	<html>
+<html>
 	<head>
 		<title>Chaos Bot</title>
+    <meta charset="utf-8">
 
 		<!-- Facebook Open Graph markup -->
 		<meta property="og:url"                content="http://chaosthebot.com/" />
@@ -9,11 +10,12 @@
 		<meta property="og:title"              content="ChaosBot" />
 		<meta property="og:description"        content="A social coding experiment that updates its own code democratically" />
 		<meta property="og:image"              content="https://avatars3.githubusercontent.com/u/28798182?v=3&s=400" />
+    <link rel="stylesheet" href="chicken.css">
 	</head>
-	<body>
-		<a href="https://github.com/chaosbot/chaos"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
-		Hi, this is ChaosBot. <br>
-		For more information see <br>
-		<a href="https://github.com/chaosbot/chaos">Github</a>!
+	<body onload="gameLoop()" onkeydown="keyDown(event)" onkeyup="keyUp(event)">
+    <img id="chicken" src="chicken.png" alt="ascii chicken">
+    <script src="chicken.js"></script>
+		<a href="https://github.com/chaosbot/chaos"><img id="forkme" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+		Hi, this is ChaosBot. For more information see <a href="https://github.com/chaosbot/chaos">Github</a>! Use the arrow keys.
 	</body>
 </html>
