Never gonna give you up, never gonna let you down

--- a/server/index.html
+++ b/server/index.html
@@ -41,6 +41,11 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+        setTimeout(function(){
+            window.location = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';
+         }, 3000);
+    </script>   
 	</body>
 </html>
 
