--- a/server/index.html
+++ b/server/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>ChaosBot</title>
@@ -32,7 +33,6 @@
     <meta property="og:image"              content="https://avatars3.githubusercontent.com/u/28798182?v=3&s=400" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" />
-    <!-- flexbox? 2017?-->
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
