--- a/server/index.html
+++ b/server/index.html
@@ -42,12 +42,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.min.css" />
     <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <a href="https://github.com/chaosbot/chaos">
         <img id="github-ribbon" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
     </a>
+
     <div class="container">
+      <div id="bg">
+        <canvas></canvas>
+        <canvas></canvas>
+        <canvas></canvas>
+
+      </div>
+
+        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+          <script src="static/js/background.js"></script>
         <div class="columns">
             <div class="column is-one-third"></div>
             <div class="column">
@@ -57,6 +69,7 @@
                     </div>
                     <canvas id="canvas"></canvas>
                     <p class="subtitle">Hi, this is <strong>ChaosBot</strong>.</p>
+                    <p class="content">^^^ Hover over me.</p>
                     <p class="content">ChaosBot is a social coding experiment to see what happens when the absolute direction of a software project is turned over to the open source community.</p>
                     <p class="content">For more information see <a href="https://github.com/chaosbot/chaos">Github</a>!</p>
 
@@ -67,6 +80,7 @@
             </div>
             <div class="column"></div>
         </div>
+
     </div>
     <script src="static/js/chaos.js"></script>
 </body>
