refactor using no jquery

--- a/server/index.html
+++ b/server/index.html
@@ -51,9 +51,9 @@
 
     <div class="container">
       <div id="bg">
-        <canvas></canvas>
-        <canvas></canvas>
-        <canvas></canvas>
+        <canvas id="cv1"></canvas>
+        <canvas id="cv2"></canvas>
+        <canvas id="cv3"></canvas>
 
       </div>
 
