--- a/server/voters.html
+++ b/server/voters.html
@@ -6,8 +6,8 @@
 </center>
 
 <script>
-    console.log(getText());
-
+    getText();
+    
     function getText() {
         var result = document.getElementById("result");
         // read text from URL location
@@ -22,7 +22,7 @@
                     var keys = Object.keys(json);
                     var values = Object.values(json);
 
-                    //1) combine the arrays:
+                    // combine arrays
                     var list = [];
                     for (var j = 0; j < keys.length; j++)
                         list.push({
@@ -30,12 +30,11 @@
                             'votes': values[j]
                         });
 
-                    //2) sort:
+                    // sort
                     list.sort(function(a, b) {
                         return -((a.votes < b.votes) ? -1 : ((a.votes == b.votes) ? 0 : 1));
                     });
 
-                    console.log(list);
                     var tablehtml = "<table>";
                     for (var i = 0; i < list.length; i++) {
                         tablehtml += "<tr><td>" + list[i].names + "</td><td>" + list[i].votes + "</tr>";
